feat: implementation of f10, stato discrepancy addition
